--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
           mkdir build
           cd build
           cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release -DBUILD_HTML_DOCS=OFF -DBUILD_MAN_DOCS=OFF -DBUILD_QTHELP_DOCS=OFF -DBUILD_TESTING=OFF -DCMAKE_INSTALL_PREFIX=/usr
-          cmake --build .
+          cmake --build . --parallel $(nproc)
           sudo cmake --build . --target install
       - name: Linux - Build SyntaxHighlighting
         if: matrix.platform == 'ubuntu-16.04'
@@ -91,7 +91,7 @@ jobs:
           mkdir build
           cd build
           cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release -DBUILD_HTML_DOCS=OFF -DBUILD_MAN_DOCS=OFF -DBUILD_QTHELP_DOCS=OFF -DBUILD_TESTING=OFF -DCMAKE_INSTALL_PREFIX=/usr
-          cmake --build .
+          cmake --build . --parallel $(nproc)
           sudo cmake --build . --target install
       - name: Linux - ${{ matrix.qt_version }} - Generate Dependencies and Build
         if: matrix.platform == 'ubuntu-16.04'
@@ -103,7 +103,7 @@ jobs:
           mkdir build
           cd build
           cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=./AppDir/usr
-          cmake --build .
+          cmake --build . --parallel $(nproc)
           cmake --install .
       - name: Linux - ${{ matrix.qt_version }} - Generating AppImage
         if: matrix.platform == 'ubuntu-16.04'
@@ -159,7 +159,7 @@ jobs:
           mkdir build
           cd build
           cmake .. -GNinja -DBUILD_HTML_DOCS=OFF -DBUILD_MAN_DOCS=OFF -DBUILD_QTHELP_DOCS=OFF -DBUILD_TESTING=OFF
-          cmake --build .
+          cmake --build . --parallel $(nproc)
           cmake --build . --target install
       - name: Win - Build syntax highlight
         if: matrix.platform == 'windows-latest'
@@ -171,7 +171,7 @@ jobs:
           mkdir build
           cd build
           cmake .. -GNinja -DBUILD_HTML_DOCS=OFF -DBUILD_MAN_DOCS=OFF -DBUILD_QTHELP_DOCS=OFF -DBUILD_TESTING=OFF
-          cmake --build .
+          cmake --build . --parallel $(nproc)
           cmake --build . --target install
       - name: Windows - ${{ matrix.qt_version }} - Generate Dependencies and Build
         if: matrix.platform == 'windows-latest'
@@ -182,7 +182,7 @@ jobs:
           mkdir build
           cd build
           cmake .. -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=Release -DKF5SyntaxHighlighting_DIR="C:/Program Files (x86)/ECM/lib/cmake/KF5SyntaxHighlighting" -DCMAKE_GENERATOR_PLATFORM=${{ matrix.cmakearch }}
-          cmake --build .
+          cmake --build . --parallel $(nproc)
           cmake --install .
           cd Debug
           windeployqt notepanda.exe
