--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,8 @@ jobs:
     strategy:
       matrix:
         qt_version: [5.14.2]
-        platform: [ubuntu-16.04, macos-latest, windows-latest]
+        # platform: [ubuntu-16.04, macos-latest, windows-latest]
+        platform: windows-latest
         arch: [x86, x64]
         include:
           - platform: windows-latest
