--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Build CI
 
-on: 
+on:
   push:
   release:
     types: [prereleased]
@@ -33,10 +33,10 @@ jobs:
       - name: Checking out sources
         uses: actions/checkout@v2
         with:
-          submodules: 'recursive'
+          submodules: "recursive"
       - name: Install MSVC compiler
         uses: ilammy/msvc-dev-cmd@v1
-        with: 
+        with:
           # 14.1 is for vs2017, 14.2 is vs2019, following the upstream vcpkg build from Qv2ray-deps repo
           toolset: 14.2
           arch: ${{ matrix.arch }}
@@ -51,13 +51,13 @@ jobs:
         with:
           version: ${{ matrix.qt_version }}
           arch: ${{ matrix.qtarch }}
-          mirror: 'http://mirrors.ocf.berkeley.edu/qt/'
+          mirror: "http://mirrors.ocf.berkeley.edu/qt/"
           cached: ${{ steps.cache-qt.outputs.cache-hit }}
       - name: Install Python 3.7 version
         if: matrix.platform == 'windows-latest'
         uses: actions/setup-python@v1
         with:
-          python-version: '3.7'
+          python-version: "3.7"
           architecture: ${{ matrix.arch }}
       # Linux------------------------------------------
       - name: Linux - Install packages
@@ -100,7 +100,7 @@ jobs:
         env:
           CC: /usr/bin/gcc-9
           CXX: /usr/bin/g++-9
-        run: | 
+        run: |
           mkdir build
           cd build
           cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=./AppDir/usr
@@ -149,7 +149,7 @@ jobs:
       - name: Win-${{ matrix.arch }} - ${{ matrix.qt_version }} - Build preparation - Download Dependencies
         if: matrix.platform == 'windows-latest'
         run: |
-         choco install -y ninja
+          choco install -y ninja
       - name: Win - Build ecm
         if: matrix.platform == 'windows-latest'
         env:
@@ -182,7 +182,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=Release -DKF5SyntaxHighlighting_DIR="C:/Program Files (x86)/ECM/lib/cmake/KF5SyntaxHighlighting"
+          cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release -DKF5SyntaxHighlighting_DIR="C:/Program Files (x86)/ECM/lib/cmake/KF5SyntaxHighlighting"
           cmake --build . --parallel $(nproc)
           cmake --install .
           tree /F
@@ -256,4 +256,3 @@ jobs:
           asset_name: Notepanda.${{ steps.get_version.outputs.VERSION }}.Windows-${{ matrix.arch }}.7z
           tag: ${{ github.ref }}
           overwrite: true
-
