--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -95,12 +95,7 @@ if(CMAKE_PREFIX_PATH)
         list(APPEND DIRS "${dir}/bin" "${dir}/lib")
     endforeach()
 endif()
-
-# Append Qt's lib folder which is two levels above Qt5Widgets_DIR
-list(APPEND DIRS "${Qt5Widgets_DIR}/../..")
-list(APPEND DIRS "/usr/local/lib")
-list(APPEND DIRS "/usr/lib")
-list(APPEND DIRS "${KF5SyntaxHighlighting_DIR}/../../../bin/")
+include(InstallRequiredSystemLibraries)
 
 # Packaging
 set(CPACK_PACKAGE_VENDOR "ChungZH")
@@ -110,21 +105,6 @@ set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/ChungZH/notepanda")
 set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/images/panda.ico")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.md")
 
-include(InstallRequiredSystemLibraries)
-
-if(WIN32)
-    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION .)
-    if (BUILD_NSIS)
-        add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-            COMMAND windeployqt ${CMAKE_BINARY_DIR}/Release/${PROJECT_NAME}.exe 
-            )
-        install(DIRECTORY ${CMAKE_BINARY_DIR}/Release/ DESTINATION .)
-    endif()
-    set(APPS "\$ENV{DESTDIR}\${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}.exe")
-    install(CODE "include(BundleUtilities)
-      fixup_bundle(\"${APPS}\" \"\" \"${DIRS}\")")
-endif()
-
 if(MSVC)
    if(NOT BUILD_NSIS)
     set(CMAKE_INSTALL_SYSTEM_RUNTIME_DESTINATION .)
@@ -132,8 +112,18 @@ if(MSVC)
 endif()
 
 if(WIN32)
+    install(TARGETS ${PROJECT_NAME} RUNTIME DESTINATION .)
+    if (BUILD_NSIS)
+        add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
+            COMMAND windeployqt ${CMAKE_BINARY_DIR}/${PROJECT_NAME}.exe --compiler-runtime --verbose 2 --dir ${CMAKE_BINARY_DIR}/winqt/
+            )
+        install(DIRECTORY ${CMAKE_BINARY_DIR}/winqt/ DESTINATION .)
+    endif()
+    set(APPS "\$ENV{DESTDIR}\${CMAKE_INSTALL_PREFIX}/${PROJECT_NAME}.exe")
+endif()
+
+if(WIN32)
     if(BUILD_NSIS)
-        add_definitions(-DQV2RAY_NO_ASIDECONFIG)
         set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/images\\\\panda.ico")
         set(CPACK_GENERATOR "NSIS")
         set(CPACK_NSIS_MUI_ICON "${CMAKE_SOURCE_DIR}/images/panda.ico")
@@ -158,6 +148,12 @@ if(WIN32)
         ")
         set(CPACK_PACKAGE_INSTALL_DIRECTORY "notepanda")
     endif()
+endif()
+
+if(WIN32)
+    list(APPEND DIRS "${KF5SyntaxHighlighting_DIR}/../../../bin/")
+    install(CODE "include(BundleUtilities)
+          fixup_bundle(\"${APPS}\" \"\" \"${DIRS}\")")
 endif()
 
 include(CPack)
