--- a/.github/workflows/nsis.yml
+++ b/.github/workflows/nsis.yml
@@ -97,9 +97,13 @@ jobs:
           mkdir build
           cd build
           tree /F
-          cmake .. -DCMAKE_BUILD_TYPE=Release -DKF5SyntaxHighlighting_DIR="C:/Program Files (x86)/ECM/lib/cmake/KF5SyntaxHighlighting" -DCMAKE_GENERATOR_PLATFORM=${{ matrix.cmakearch }} -DBUILD_NSIS=ON -DCMAKE_INSTALL_PREFIX=Release 
+          cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release -DKF5SyntaxHighlighting_DIR="C:/Program Files (x86)/ECM/lib/cmake/KF5SyntaxHighlighting" -DBUILD_NSIS=ON
           tree /F
           cmake --build . --target package --parallel $(nproc)
+      - name: Win-${{ matrix.arch }} - ${{ matrix.qt_version }} - Uploading DEBUG
+        if: matrix.platform == 'windows-latest' && ${{ failure() }}
+        run: |
+          tree /F
       - name: Windows - Get package name
         shell: bash
         id: get_package
