--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,7 @@ endif()
 include(InstallRequiredSystemLibraries)
 
 # Packaging
+set(CPACK_PACKAGE_NAME "Notepanda")
 set(CPACK_PACKAGE_VENDOR "ChungZH")
 set(CPACK_PACKAGE_VERSION ${VERSION_STRING})
 set(CPACK_PACKAGE_DESCRIPTION "A simple cross-platform notepad.")
@@ -129,8 +130,8 @@ endif()
 
 if(WIN32)
     if(BUILD_NSIS)
-        set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/images\\\\panda.ico")
         set(CPACK_GENERATOR "NSIS")
+        set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/images\\\\panda.ico")
         set(CPACK_NSIS_MUI_ICON "${CMAKE_SOURCE_DIR}/images/panda.ico")
         set(CPACK_NSIS_MUI_UNIICON "${CMAKE_SOURCE_DIR}/images/panda.ico")
         set(CPACK_NSIS_DISPLAY_NAME "Notepanda")
@@ -153,6 +154,21 @@ if(WIN32)
         ")
         set(CPACK_PACKAGE_INSTALL_DIRECTORY "notepanda")
     endif()
+endif()
+
+if(UNIX)
+    if(BUILD_DEB)
+        set(CPACK_GENERATOR "DEB")
+        set(CPACK_DEBIAN_PACKAGE_NAME "Notepanda")
+        set(CPACK_PACKAGE_CONTACT "chungzh07@gmail.com")
+        set(CPACK_DEBIAN_PACKAGE_MAINTAINER "ChungZH")
+        set(CPACK_DEBIAN_PACKAGE_DEPENDS "qtbase5, qttools5")
+    endif()
+
+    #if(BUILD_RPM)
+    #    set(CPACK_GENERATOR "RPM")
+    #    set(CPACK_RPM_PACKAGE_LICENSE "MIT")
+    #endif()
 endif()
 
 if(WIN32)
