--- a/.github/workflows/cpack-deb.yml
+++ b/.github/workflows/cpack-deb.yml
@@ -47,6 +47,9 @@ jobs:
           cmake .. -GNinja -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX=./AppDir/usr -DBUILD_DEB=ON
           cmake --build . --target package --parallel $(nproc)
           tree /F
+      - name: Copy binary
+        run: |
+          cp __w/qv2ray_*.deb ./
       - name: Get package name
         shell: bash
         id: get_package
