--- a/.github/workflows/cpack-deb.yml
+++ b/.github/workflows/cpack-deb.yml
@@ -55,7 +55,7 @@ jobs:
         uses: actions/upload-artifact@v2-preview
         with:
           name: Notepanda_${{ matrix.distro }}
-          path: ${{ steps.get_package.outputs.NAME }}
+          path: build/${{ steps.get_package.outputs.NAME }}
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v1-release
         if: github.event_name == 'release' && matrix.distro == 'stable'
