--- a/.github/workflows/cpack-deb.yml
+++ b/.github/workflows/cpack-deb.yml
@@ -54,14 +54,14 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v2-preview
         with:
-          name: Notepanda_${{ matrix.distro }}
+          name: ${{ steps.get_package.outputs.NAME }}
           path: build/${{ steps.get_package.outputs.NAME }}
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@v1-release
         if: github.event_name == 'release' && matrix.distro == 'stable'
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: ${{ steps.get_package.outputs.NAME }}
+          file: build/${{ steps.get_package.outputs.NAME }}
           asset_name: ${{ steps.get_package.outputs.NAME }}
           tag: ${{ github.ref }}
           overwrite: true
