--- a/.github/workflows/cpack-deb.yml
+++ b/.github/workflows/cpack-deb.yml
@@ -51,7 +51,7 @@ jobs:
         shell: bash
         id: get_package
         run: |
-          mv $(basename build/Notepanda-*.deb) $(echo $(basename build/Notepanda-*.deb) | sed 's/[[:space:]]//g')
+          mv $(build/Notepanda-*.deb) $(echo ::set-output name=NAME::$(build/Notepanda-*.deb) | sed 's/[[:space:]]//g')
           echo ::set-output name=NAME::$(basename build/Notepanda-*.deb)
       - name: Upload artifact
         uses: actions/upload-artifact@v2-preview
