--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -162,7 +162,7 @@ if(UNIX)
         set(CPACK_DEBIAN_PACKAGE_NAME "Notepanda")
         set(CPACK_PACKAGE_CONTACT "chungzh07@gmail.com")
         set(CPACK_DEBIAN_PACKAGE_MAINTAINER "ChungZH")
-        set(CPACK_DEBIAN_PACKAGE_DEPENDS "qtbase5-dev qttools5-dev libkf5syntaxhighlighting-dev")
+        set(CPACK_DEBIAN_PACKAGE_DEPENDS "qtbase5-dev, qttools5-dev, libkf5syntaxhighlighting-dev")
     endif()
 
     #if(BUILD_RPM)
