--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -49,7 +49,7 @@ message("| Welcome to contribute!                          |")
 message("|-------------------------------------------------|")
 message(" ")
 
-find_package(Qt5 COMPONENTS Core Gui Widgets Svg REQUIRED)
+find_package(Qt5 COMPONENTS Core Gui Widgets REQUIRED)
 find_package(KF5SyntaxHighlighting REQUIRED)
 
 if(WIN32)
@@ -103,6 +103,7 @@ endif()
 include(InstallRequiredSystemLibraries)
 
 # Packaging
+set(CPACK_PACKAGE_NAME "Notepanda")
 set(CPACK_PACKAGE_VENDOR "ChungZH")
 set(CPACK_PACKAGE_VERSION ${VERSION_STRING})
 set(CPACK_PACKAGE_DESCRIPTION "A simple cross-platform notepad.")
@@ -129,8 +130,8 @@ endif()
 
 if(WIN32)
     if(BUILD_NSIS)
-        set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/images\\\\panda.ico")
         set(CPACK_GENERATOR "NSIS")
+        set(CPACK_PACKAGE_ICON "${CMAKE_SOURCE_DIR}/images\\\\panda.ico")
         set(CPACK_NSIS_MUI_ICON "${CMAKE_SOURCE_DIR}/images/panda.ico")
         set(CPACK_NSIS_MUI_UNIICON "${CMAKE_SOURCE_DIR}/images/panda.ico")
         set(CPACK_NSIS_DISPLAY_NAME "Notepanda")
@@ -155,6 +156,21 @@ if(WIN32)
     endif()
 endif()
 
+if(UNIX)
+    if(BUILD_DEB)
+        set(CPACK_GENERATOR "DEB")
+        set(CPACK_DEBIAN_PACKAGE_NAME "Notepanda")
+        set(CPACK_PACKAGE_CONTACT "chungzh07@gmail.com")
+        set(CPACK_DEBIAN_PACKAGE_MAINTAINER "ChungZH")
+        set(CPACK_DEBIAN_PACKAGE_DEPENDS "qtbase5-dev, qttools5-dev, libkf5syntaxhighlighting-dev")
+    endif()
+
+    #if(BUILD_RPM)
+    #    set(CPACK_GENERATOR "RPM")
+    #    set(CPACK_RPM_PACKAGE_LICENSE "MIT")
+    #endif()
+endif()
+
 if(WIN32)
     list(APPEND DIRS "${KF5SyntaxHighlighting_DIR}/../../../bin/")
     install(CODE "include(BundleUtilities)
@@ -163,4 +179,4 @@ endif()
 
 include(CPack)
 
-target_link_libraries(notepanda Qt5::Core Qt5::Gui Qt5::Widgets Qt5::Svg KF5::SyntaxHighlighting)
+target_link_libraries(notepanda Qt5::Core Qt5::Gui Qt5::Widgets KF5::SyntaxHighlighting)
