--- a/.github/workflows/cpack-nsis.yml
+++ b/.github/workflows/cpack-nsis.yml
@@ -45,6 +45,8 @@ jobs:
         with: 
           toolset: 14.2
           arch: ${{ matrix.arch }}
+        run: |
+          set VCINSTALLDIR="C:\Program Files (x86)\Microsoft Visual Studio 16.0\VC"
       - name: Cache Qt
         id: cache-qt
         uses: actions/cache@v1
