--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,9 @@ jobs:
         with:
           python-version: "3.7"
           architecture: ${{ matrix.arch }}
-      # Linux------------------------------------------
+      - name: Get latest CMake
+        uses: lukka/get-cmake@latest
+# Linux------------------------------------------
       - name: Linux - Install packages
         if: matrix.platform == 'ubuntu-16.04'
         shell: bash
