--- a/.github/workflows/cpack-deb.yml
+++ b/.github/workflows/cpack-deb.yml
@@ -37,9 +37,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           submodules: 'recursive'
+      - name: Get latest CMake
+        uses: lukka/get-cmake@latest
       - name: Install build dependencies
         run: |
-          apt-get install -y build-essential ninja-build qtbase5-dev qttools5-dev cmake libkf5syntaxhighlighting-dev tree
+          apt-get install -y build-essential ninja-build qtbase5-dev qttools5-dev libkf5syntaxhighlighting-dev
       - name: Build
         run: |
           mkdir build
