fix: cannot found dll on WIndows (#29)
* fix: runtime lib

* fix: runtime lib

* fix: runtime lib

* fix

* fix

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -157,6 +157,7 @@ jobs:
           CC: cl.exe
           CXX: cl.exe
         run: |
+          set VCINSTALLDIR="C:\Program Files (x86)\Microsoft Visual Studio 16.0\VC"
           cd src/3rdparty/extra-cmake-modules
           mkdir build
           cd build
