--- a/.github/workflows/cpack-deb.yml
+++ b/.github/workflows/cpack-deb.yml
@@ -62,6 +62,6 @@ jobs:
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
           file: build/${{ steps.get_package.outputs.NAME }}
-          asset_name: ${{ steps.get_package.outputs.NAME }}
+          asset_name: Notepanda.${{ steps.get_version.outputs.VERSION }}-${{ matrix.distro }}.deb
           tag: ${{ github.ref }}
           overwrite: true
